# dci.0

./: .gitignore  CMakeLists.txt
core/api/: CMakeLists.txt  dciApi.cmake
core/api/include/dci/: api.hpp
core/async/: CMakeLists.txt
core/async/include/: event.hpp  future.hpp  mutex.hpp  promise.hpp  sizeProvider.hpp
core/async/include/dci/: async.hpp
core/async/include/details/: acquire.hpp  futureState.hpp  task.hpp  taskInstance.hpp  taskPromiseProcessor.hpp
core/async/src/: barrier.cpp  condVar.cpp  event.cpp  functions.cpp  lockable.cpp  mutex.cpp  mutexRecursive.cpp  notifierAll.cpp  notifierOne.cpp  pulser.cpp  pulserAll.cpp  pulserOne.cpp  semaphore.cpp  waitable.cpp  waiter.cpp
core/async/src/details/: acquire.cpp  task.cpp
core/async/src/impl/: barrier.cpp  barrier.hpp  condVar.hpp  event.cpp  event.hpp  lockable.cpp  lockable.hpp  mutex.cpp  mutex.hpp  mutexRecursive.cpp  mutexRecursive.hpp  notifierAll.cpp  notifierAll.hpp  notifierOne.cpp  notifierOne.hpp  pulser.cpp  pulser.hpp  pulserAll.cpp  pulserAll.hpp  pulserOne.cpp  pulserOne.hpp  scheduler.cpp  scheduler.hpp  semaphore.cpp  semaphore.hpp  syncronizer.cpp  syncronizerWaiter.cpp  task.hpp  waitable.cpp  waitable.hpp  waiter.cpp  waiter.hpp
core/async/test/: syncronizers.cpp
core/couple/generator/: CMakeLists.txt
core/couple/generator/include/: executor.hpp
core/couple/generator/src/: executor.cpp
core/couple/meta/: CMakeLists.txt
core/couple/meta/include/: alias.hpp  array.hpp  attribute.hpp  compound.hpp  container1.hpp  container2.hpp  enum.hpp  enumValue.hpp  iface.hpp  inheritable.hpp  layoutProvider.hpp  library.hpp  libraryBuilder.hpp  list.hpp  map.hpp  method.hpp  named.hpp  predecl.hpp  primitive.hpp  ptr.hpp  scope.hpp  scoped.hpp  set.hpp  sign.hpp  signed.hpp  sizeProvider.hpp  struct.hpp  type.hpp  variant.hpp
core/couple/meta/src/: alias.cpp  array.cpp  attribute.cpp  compound.cpp  container1.cpp  container2.cpp  enum.cpp  enumValue.cpp  errc.cpp  errcValue.cpp  iface.cpp  inheritable.cpp  interface.cpp  library.cpp  libraryBuilder.cpp  list.cpp  map.cpp  method.cpp  named.cpp  primitive.cpp  ptr.cpp  scope.cpp  scoped.cpp  set.cpp  sign.cpp  signed.cpp  struct.cpp  type.cpp  variant.cpp
core/couple/parser/: CMakeLists.txt
core/couple/parser/src/: config.cpp  errorInfo.cpp  exec.cpp  pch.hpp
core/couple/runtime/: CMakeLists.txt
core/couple/runtime/include/: callResult.hpp  callWire.hpp  error.hpp  identifier.hpp  idl.hpp  iface.hpp  ifaceState.hpp  layoutProvider.hpp  sign.hpp  signal.hpp  sizeProvider.hpp
core/couple/runtime/src/: bytes.cpp  errcCategoryProvider.cpp  error.cpp  hub.cpp  iface.cpp  ifaceState.cpp  ifaceWire.cpp  interface.cpp  interfaceWire.cpp  interfaceWires.cpp  sign.cpp  signBuilder.cpp
core/couple/serialize/: CMakeLists.txt
core/couple/serialize/src/: error.cpp
core/couple/translator/: CMakeLists.txt  DciUseIdl.cmake  dciUseIdl.cmake
core/couple/translator/src/: main.cpp
core/gtest/: CMakeLists.txt  dciTest.cmake
core/gtest/include/dci/: gtest.hpp
core/gtest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc  testHub.cpp
core/himpl/: CMakeLists.txt  DciHimpl.cmake  dciHimpl.cmake
core/himpl/include/: face2Impl.hpp  faceLayout.hpp  layoutChecker.hpp  layoutProvider.hpp  layoutProviderDefault.hpp  sizeFetcher.hpp  sizeProviderDefault.hpp
core/logger/: CMakeLists.txt
core/logger/include/: logger.hpp
core/logger/include/dci/: logger.hpp
core/mm/: CMakeLists.txt  config.h.in
core/mm/include/: newDelete.hpp  sharedInstance.hpp
core/mm/include/dci/: mm.hpp
core/mm/src/: allocator.cpp  allocator.hpp  allocator.ipp  functions.cpp  functions.ipp  vm.cpp
core/mm/src/allocator/: bitIndex.hpp  bitIndex.ipp  block.hpp  block.ipp  blocksHolder.hpp  blocksHolder.ipp  stack.cpp  stackLayout.hpp  stackState.hpp
core/mm/src/utils/: intrusiveDeque.hpp  intrusiveDeque.ipp  sized_cast.hpp  sized_cast.ipp
core/pch/: CMakeLists.txt  dciPch.cmake
core/poll/: CMakeLists.txt
core/poll/include/dci/: poll.hpp
core/poll/src/: descriptor.cpp  error.cpp  functions.cpp  timer.cpp
core/poll/src/impl/: descriptor.cpp  descriptor.hpp  engine.cpp  engine.hpp  epoll.cpp  epoll.hpp  timer.cpp  timer.hpp  timerEngine.cpp  timerEngine.hpp
core/poller/: CMakeLists.txt
core/poller/include/dci/: poller.hpp
core/poller/src/: descriptor.cpp  error.cpp  functions.cpp
core/poller/src/impl/: descriptor.cpp  descriptor.hpp  engine.cpp  engine.hpp  engineEpoll.cpp  engineEpoll.hpp  epoll.cpp  epoll.hpp
core/site/: CMakeLists.txt  DciDefineModule.cmake  dciDefineModule.cmake  dciTest.cmake
core/site/include/: error.hpp  layoutProvider.hpp  moduleEntry.hpp  moduleEntryFunctions.hpp  modulePlace.hpp  sizeProvider.hpp
core/site/include/dci/: site.hpp
core/site/src/: error.cpp  instance.cpp  main.cpp  manager.cpp  moduleEntry.cpp  modulePlace.cpp  serviceFactory.cpp  test.cpp  testHub.cpp
core/site/src/impl/: instance.cpp  manager.cpp  manager.hpp  module.cpp  module.hpp  modulePlace.hpp
core/utils/: CMakeLists.txt
core/utils/test/: bits.cpp
modules/example/: CMakeLists.txt
modules/example/generated1/: talk.cpp  talk.hpp
modules/example/generated1/talk/: Peer.hpp
modules/example/generated2/: talk.cpp  talk.hpp
modules/example/idl/: start.idl  talk.idl
modules/example/src/: customIface.cpp  customIface.hpp  customIfaceHandler.cpp  customIfaceHandler.hpp  entry.cpp
modules/example/test/: probe.cpp
modules/net/: CMakeLists.txt
modules/net/idl/: net.idl
modules/net/idl/net/: datagram.inc  stream.inc
modules/net/src/: entry.cpp
modules/net/src/handlers/: datagramChannel.hpp  datagramHost.hpp  host.cpp  host.hpp  (+9 more)
modules/net/test/: probe.cpp
modules/streamer/: CMakeLists.txt
modules/streamer/idl/: streamer.idl  test.idl
modules/streamer/src/: entry.cpp
modules/streamer/test/: hubPool.cpp  linksContainer.cpp  linksPool.cpp  localLinksContainer.cpp  probe.cpp  serviceHub.cpp
(+431 files in other folders)
